tests/baselines/reference/nodeModulesImportAttributes(module=node18).errors.txt
otherc.cts(1,35): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.


==== index.ts (0 errors) ====
    import json from "./package.json" with { type: "json" };
==== otherc.cts (1 errors) ====
    import json from "./package.json" with { type: "json" }; // should error, cjs mode imports don't support attributes
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    const json2 = import("./package.json", { with: { type: "json" } }); // should be fine
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }
    